--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-.demo{
-    color: red;
+h1{
+    color:aqua;
+}
+button{
+    color:black--;
+    background-color: gray;
+}
+body{
+    background-color: white;
+}
+.Heading{
+    color:red;
+}
+div{
+    background-color: black;
+    color: white;
 }
