--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ div{
     background-color: black;
     color: white;
 }
+#one{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+#to{
+    font-family:serif;
+
+}
